# tx-tx-tx

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  Makefile  README.md  docker  docker-compose.yml  foundry.toml  run
contracts/: HelloWorld.sol  MyNFT.sol
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  ui.rs
crates/cli/src/commands/: compile_sc.rs  deploy.rs  gen_wallet.rs  invoke_stress.rs  mod.rs  sign.rs  transfer_eth.rs  verify.rs
crates/cli/src/ui/: handlers.rs  loading.rs  menu.rs
crates/cli/src/ui/handlers/: compile.rs  gate.rs  invoker.rs  signature.rs  transfer.rs  utils.rs  wallet.rs
crates/core/: Cargo.toml
crates/core/src/: compiler.rs  config.rs  crypto.rs  gas.rs  lib.rs  networks.rs
crates/core/src/invoker/: abi.rs  codec.rs  deployment.rs  executor.rs  invoker_impl.rs  mod.rs
crates/core/src/network/: http_client.rs  mod.rs  websocket_client.rs
crates/core/src/stress/: executor.rs  mod.rs
crates/deploy/: Cargo.toml
crates/deploy/src/: artifact.rs  deployer.rs  lib.rs  metadata.rs
crates/gate/: Cargo.toml
crates/gate/src/: lib.rs
crates/signature/: Cargo.toml
crates/signature/src/: sign.rs  verify.rs
crates/transaction/: Cargo.toml
crates/transaction/src/: lib.rs  transfer.rs
crates/transfer/: Cargo.toml
crates/transfer/src/: lib.rs  transfer_eth.rs
crates/wallet/: Cargo.toml
crates/wallet/src/: generator.rs  lib.rs  wallet.rs
data/: networks.json
examples/: example_sign.rs
src/: cli.rs  core.rs  evm.rs  features.rs  lib.rs  main.rs
src/cli/: commands.rs  ui.rs
src/cli/ui/: handlers.rs  menu.rs
src/core/: config.rs  crypto.rs  networks.rs
src/evm/: sign.rs  verify.rs
src/features/: transfer.rs
src/features/signature/: sign.rs  verify.rs
tests/: integration.rs
