[package]
name = "tx-tx-tx"
version = "0.1.0"
edition = "2024"

[dependencies]
ethers = "2.0"
sha3 = "0.10"
dotenvy = "0.15"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
secp256k1 = { version = "0.27", features = ["recovery"] }
inquire = "0.7"
colored = "2.1"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "tx-tx-tx"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
