[workspace]
members = [
    "crates/core",
    "crates/signature",
    "crates/transfer",
    "crates/deploy",
    "crates/gate",
    "crates/cli",
    "crates/app",
    "crates/wallet",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
