[package]
name = "x_deploy"
version.workspace = true
edition.workspace = true

[dependencies]
x_core = { path = "../core" }
ethers = { version = "2.0", features = ["abigen"] }
anyhow = "1.0"
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
