[package]
name = "x_wallet"
version.workspace = true
edition.workspace = true

[dependencies]
x_signature = { path = "../signature" }
x_core = { path = "../core" }
secp256k1 = { version = "0.29", features = ["rand-std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rand = "0.8"
hex = "0.4"
